--- a/fruitSearch.html
+++ b/fruitSearch.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Fruit Autocomplete</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="./style.css">
+<link rel="stylesheet" href="./fruitSearch.css">
 
 </head>
 <body>
@@ -16,15 +16,13 @@
 
   <div class="suggestions">
 		<ul id="listcontent">
-      <li></li>
-
     </ul>
 	</div>
 </div>
 
 
 <!-- partial -->
-  <script  src="./script.js"></script>
+  <script  src="./fruitSearch.js"></script>
 
 </body>
 </html>
